--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -1,249 +1,249 @@
 ---
-title: Migrer d’ASP.NET Core 2.0 vers 2.1
+title: Migrer de ASP.NET Core 2,0 à 2,1
 author: rick-anderson
-description: Cet article aborde les principes fondamentaux de la migration d’une application ASP.NET Core 2.0 à la version 2.1.
+description: Cet article décrit les principes fondamentaux de la migration d’une application ASP.NET Core 2,0 vers 2,1.
 ms.author: riande
 ms.custom: mvc
 ms.date: 06/09/2019
 uid: migration/20_21
-ms.openlocfilehash: 7c81fefb559165880afb935ae46cf710e9ff5c43
-ms.sourcegitcommit: 9691b742134563b662948b0ed63f54ef7186801e
+ms.openlocfilehash: 86d9e0f6b5160f2f8cca7e1ea0d3b638cf1ed3ba
+ms.sourcegitcommit: 7dfe6cc8408ac6a4549c29ca57b0c67ec4baa8de
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 06/10/2019
-ms.locfileid: "66824806"
+ms.lasthandoff: 01/09/2020
+ms.locfileid: "75828813"
 ---
-# <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer d’ASP.NET Core 2.0 vers 2.1
+# <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer de ASP.NET Core 2,0 à 2,1
 
 Par [Rick Anderson](https://twitter.com/RickAndMSFT)
 
-Consultez [quelles sont les nouveautés dans ASP.NET Core 2.1](xref:aspnetcore-2.1) pour une vue d’ensemble des nouvelles fonctionnalités dans ASP.NET Core 2.1.
+Pour obtenir une vue d’ensemble des nouvelles fonctionnalités de ASP.NET Core 2,1, voir [Nouveautés de ASP.NET Core 2,1](xref:aspnetcore-2.1) .
 
-Cet article :
+Cet article :
 
-* Couvre les principes fondamentaux de la migration d’une application ASP.NET Core 2.0 à la version 2.1.
-* Fournit une vue d’ensemble des modifications pour les modèles d’application web ASP.NET Core.
+* Décrit les principes fondamentaux de la migration d’une application ASP.NET Core 2,0 vers 2,1.
+* Fournit une vue d’ensemble des modifications apportées aux modèles d’application Web ASP.NET Core.
 
-Un moyen rapide d’obtenir une vue d’ensemble des modifications dans 2.1 consiste à :
+Un moyen rapide d’obtenir une vue d’ensemble des modifications apportées à 2,1 consiste à :
 
-* Créer une application web de ASP.NET Core 2.0 appelée application Web 1.
-* Valider l’application Web 1 dans un système de contrôle de code source.
-* Supprimer l’application Web 1 et créer une application web de ASP.NET Core 2.1 appelée application Web 1 au même endroit.
-* Passez en revue les modifications dans la version 2.1.
+* Créez une application Web ASP.NET Core 2,0 nommée application Web 1.
+* Validez le application Web 1 dans un système de contrôle de code source.
+* Supprimez application Web 1 et créez une application Web ASP.NET Core 2,1 nommée application Web 1 au même endroit.
+* Passez en revue les modifications apportées à la version 2,1.
 
-Cet article fournit une vue d’ensemble sur la migration vers ASP.NET Core 2.1. Il ne contient pas une liste complète de toutes les modifications nécessaires pour migrer vers la version 2.1. Certains projets peuvent nécessiter des étapes plus selon les options sélectionnées lors de la création du projet et les modifications apportées au projet.
+Cet article fournit une vue d’ensemble de la migration vers ASP.NET Core 2,1. Il ne contient pas une liste complète de toutes les modifications nécessaires à la migration vers la version 2,1. Certains projets peuvent nécessiter des étapes supplémentaires en fonction des options sélectionnées lors de la création du projet et des modifications apportées au projet.
 
 ## <a name="update-the-project-file-to-use-21-versions"></a>Mettre à jour le fichier projet pour utiliser les versions 2.1
 
-Mettre à jour le fichier projet :
+Mettez à jour le fichier projet :
 
-* Modifier le framework cible pour .NET Core 2.1 en mettant à jour le fichier projet pour `<TargetFramework>netcoreapp2.1</TargetFramework>`.
-* Remplacez la référence de package pour `Microsoft.AspNetCore.All` avec une référence de package pour `Microsoft.AspNetCore.App`. Vous devrez peut-être ajouter des dépendances qui ont été supprimés de `Microsoft.AspNetCore.All`. Pour plus d’informations, consultez <xref:fundamentals/metapackage#migrate> et <xref:fundamentals/metapackage-app>.
-* Supprimez l’attribut « Version » sur la référence de package à `Microsoft.AspNetCore.App`. Des projets qui utilisent `<Project Sdk="Microsoft.NET.Sdk.Web">` n’avez pas besoin de définir la version. La version est impliquée par le framework cible et sélectionnée pour mieux correspondre à la façon dont ASP.NET Core 2.1 fonctionne. Pour plus d’informations, consultez le [règles pour les projets qui ciblent le framework partagé](#rules-for-projects-targeting-the-shared-framework) section.
-* Pour les applications qui ciblent le .NET Framework, mettez à jour chaque référence de package à la version 2.1.
-* Supprimer les références à **&lt;DotNetCliToolReference&gt;** éléments pour les packages suivants. Ces outils sont regroupés par défaut dans l’interface CLI .NET Core et n’avez pas besoin d’installer séparément.
-  * Microsoft.DotNet.Watcher.Tools (`dotnet watch`)
-  * Microsoft.EntityFrameworkCore.Tools.DotNet (`dotnet ef`)
-  * Microsoft.Extensions.Caching.SqlConfig.Tools  (`dotnet sql-cache`)
-  * Microsoft.Extensions.SecretManager.Tools (`dotnet user-secrets`)
-* Facultatif : vous pouvez supprimer le **&lt;DotNetCliToolReference&gt;** élément pour `Microsoft.VisualStudio.Web.CodeGeneration.Tools`. Vous pouvez remplacer cet outil avec une version installée dans le monde entier en exécutant `dotnet tool install -g dotnet-aspnet-codegenerator`.
-* Pour 2.1, une [bibliothèque de classes Razor](xref:razor-pages/ui-class) est la solution recommandée pour distribuer les fichiers Razor. Si votre application utilise des vues incorporés, ou sinon repose sur la compilation pour le runtime de fichiers Razor, ajoutez `<CopyRefAssembliesToPublishDirectory>true</CopyRefAssembliesToPublishDirectory>` à un `<PropertyGroup>` dans votre fichier projet.
+* Remplacez le Framework cible par .NET Core 2,1 en mettant à jour le fichier projet pour `<TargetFramework>netcoreapp2.1</TargetFramework>`.
+* Remplacez la référence de package pour `Microsoft.AspNetCore.All` par une référence de package pour `Microsoft.AspNetCore.App`. Vous devrez peut-être ajouter des dépendances qui ont été supprimées de `Microsoft.AspNetCore.All`. Pour plus d'informations, consultez les rubriques <xref:fundamentals/metapackage#migrate> et <xref:fundamentals/metapackage-app>.
+* Supprimez l’attribut « version » de la référence de package à `Microsoft.AspNetCore.App`. Les projets qui utilisent `<Project Sdk="Microsoft.NET.Sdk.Web">` n’ont pas besoin de définir la version. La version est impliquée par le Framework cible et sélectionnée pour correspondre au mieux à la façon dont ASP.NET Core 2,1 fonctionne. Pour plus d’informations, consultez les [règles pour les projets ciblant la section Framework partagé](#rules-for-projects-targeting-the-shared-framework) .
+* Pour les applications qui ciblent le .NET Framework, mettez à jour chaque référence de package vers 2,1.
+* Supprimez les références aux éléments **&lt;DotNetCliToolReference&gt;** pour les packages suivants. Ces outils sont regroupés par défaut dans le CLI .NET Core et n’ont pas besoin d’être installés séparément.
+  * Microsoft. DotNet. Watcher. Tools (`dotnet watch`)
+  * Microsoft. EntityFrameworkCore. Tools. DotNet (`dotnet ef`)
+  * Microsoft. extensions. Caching. SqlConfig. Tools (`dotnet sql-cache`)
+  * Microsoft. extensions. SecretManager. Tools (`dotnet user-secrets`)
+* Facultatif : vous pouvez supprimer l’élément **&lt;DotNetCliToolReference&gt;** pour `Microsoft.VisualStudio.Web.CodeGeneration.Tools`. Vous pouvez remplacer cet outil par une version installée globalement en exécutant `dotnet tool install -g dotnet-aspnet-codegenerator`.
+* Pour 2,1, une [bibliothèque de classes Razor](xref:razor-pages/ui-class) est la solution recommandée pour distribuer des fichiers Razor. Si votre application utilise des vues incorporées, ou si elle s’appuie sur la compilation du runtime des fichiers Razor, ajoutez `<CopyRefAssembliesToPublishDirectory>true</CopyRefAssembliesToPublishDirectory>` à un `<PropertyGroup>` dans votre fichier projet.
 
-Le balisage suivant montre le fichier générés par des modèles de 2.0 projet :
+Le balisage suivant montre le fichier de projet 2,0 généré par un modèle :
 
 [!code-xml[](20_21/sample/WebApp20.csproj)]
 
-Le balisage suivant montre le fichier de 2.1 projet modèle généré :
+Le balisage suivant montre le fichier de projet 2,1 généré par un modèle :
 
 [!code-xml[](20_21/sample/WebApp21.csproj)]
 
-## <a name="rules-for-projects-targeting-the-shared-framework"></a>Règles pour les projets qui ciblent le framework partagé
+## <a name="rules-for-projects-targeting-the-shared-framework"></a>Règles pour les projets ciblant le Framework partagé
 
 Un *framework partagé* est un ensemble d’assemblys (fichiers *.dll*) qui ne sont pas dans les dossiers de l’application. Le framework partagé doit être installé sur l’ordinateur pour exécuter l’application. Pour plus d’informations, consultez [Le framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
 
-ASP.NET Core 2.1 inclut les infrastructures partagées suivantes :
+ASP.NET Core 2,1 comprend les frameworks partagés suivants :
 
 * [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app)
 * [Microsoft.AspNetCore.All](xref:fundamentals/metapackage)
 
-La version spécifiée par la référence de package est le *minimum requis* version. Par exemple, un projet faisant référence à la 2.1.1 versions de ces packages ne s’exécute sur un ordinateur avec uniquement le 2.1.0 runtime est installé.
+La version spécifiée par la référence de package est la version *minimale requise* . Par exemple, un projet référençant les versions 2.1.1 de ces packages ne s’exécutera pas sur un ordinateur sur lequel seul le runtime 2.1.0 est installé.
 
-Problèmes connus pour les projets ciblant un framework partagé :
+Problèmes connus pour les projets ciblant un Framework partagé :
 
-* Le Kit de développement .NET Core 2.1.300 SDK (la première fois dans Visual Studio 15.6) Définissez la version implicite du `Microsoft.AspNetCore.App` à 2.1.0 qui ont provoqué des conflits avec Entity Framework Core 2.1.1. La solution recommandée consiste à mettre à niveau le SDK .NET Core vers 2.1.301 ou version ultérieure. Pour plus d’informations, consultez [Packages qui partagent des dépendances avec Microsoft.AspNetCore.App ne peut pas référencer les versions correctives](https://github.com/aspnet/Universe/issues/1180).
-* Tous les projets qui doivent utiliser `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App` doit d’ajouter une référence de package pour le package dans le fichier projet, même s’ils contiennent une référence de projet à un autre projet à l’aide `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App`.
+* Le kit de développement logiciel (SDK) .NET Core 2.1.300 (inclus dans Visual Studio 15,6) définit la version implicite de `Microsoft.AspNetCore.App` sur 2.1.0, ce qui a provoqué des conflits avec Entity Framework Core 2.1.1. La solution recommandée consiste à mettre à niveau les kit SDK .NET Core vers 2.1.301 ou version ultérieure. Pour plus d’informations, consultez les [packages qui partagent des dépendances avec Microsoft. AspNetCore. app ne peuvent pas faire référence à des versions correctives](https://github.com/aspnet/Universe/issues/1180).
+* Tous les projets qui doivent utiliser `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App` doivent ajouter une référence de package pour le package dans le fichier projet, même s’ils contiennent une référence de projet à un autre projet à l’aide de `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App`.
 
-  Exemple :
+  Exemple :
 
   * `MyApp` a une référence de package à `Microsoft.AspNetCore.App`.
   * `MyApp.Tests` a une référence de projet à `MyApp.csproj`.
 
-  Ajoutez une référence de package pour `Microsoft.AspNetCore.App` à `MyApp.Tests`. Pour plus d’informations, consultez [test d’intégration est difficile à configurer et peut entraîner la rupture pour la maintenance de l’infrastructure partagée](https://github.com/aspnet/Home/issues/3156).
+  Ajoutez une référence de package pour `Microsoft.AspNetCore.App` à `MyApp.Tests`. Pour plus d’informations, consultez [tests d’intégration difficile à configurer et risque de perturber la maintenance de l’infrastructure partagée](https://github.com/dotnet/aspnetcore/issues/3156).
 
-## <a name="update-to-the-21-docker-images"></a>Mettre à jour vers les images de Docker 2.1
+## <a name="update-to-the-21-docker-images"></a>Mettre à jour les images de l’ancrage 2,1
 
-Dans ASP.NET Core 2.1, les images Docker migré vers le [du référentiel GitHub dotnet/dotnet-docker](https://github.com/dotnet/dotnet-docker). Le tableau suivant présente le Docker image et étiquette de modifications :
+Dans ASP.NET Core 2,1, les images de l’arrimeur ont migré vers le [référentiel GitHub dotnet/dotnet-dockr](https://github.com/dotnet/dotnet-docker). Le tableau suivant montre les modifications apportées à l’image et à la balise de l’ancrage :
 
 |2.0      |2.1      |
 |---------|---------|
-|Microsoft / aspnetcore:2.0        |microsoft/dotnet:2.1-aspnetcore-runtime |
-|microsoft/aspnetcore-build:2.0  |microsoft/dotnet:2.1-sdk |
+|Microsoft/aspnetcore : 2.0        |microsoft/dotnet:2.1-aspnetcore-runtime |
+|Microsoft/aspnetcore-Build : 2.0  |Microsoft/dotnet : 2.1-SDK |
 
-Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les balises et nouveaux noms d’image dans la colonne 2.1 de la table précédente. Pour plus d’informations, consultez [migration à partir de référentiels de docker aspnetcore à dotnet](https://github.com/aspnet/Announcements/issues/298).
+Modifiez les `FROM` lignes de votre *fichier dockerfile* de façon à utiliser les nouveaux noms d’image et balises dans la colonne 2,1 du tableau précédent. Pour plus d’informations, consultez [migration des aspnetcores de l’arrimeur d’ancrage vers dotnet](https://github.com/aspnet/Announcements/issues/298).
 
-## <a name="changes-to-take-advantage-of-the-new-code-based-idioms-that-are-recommended-in-aspnet-core-21"></a>Modifications pour tirer parti des nouveaux idiomes basée sur le code qui sont recommandés dans ASP.NET Core 2.1
+## <a name="changes-to-take-advantage-of-the-new-code-based-idioms-that-are-recommended-in-aspnet-core-21"></a>Modifications pour tirer parti des nouveaux idiomes basés sur du code qui sont recommandés dans ASP.NET Core 2,1
 
-### <a name="changes-to-main"></a>Modifications apportées à la Main
+### <a name="changes-to-main"></a>Modifications apportées à la base
 
-Les illustrations suivantes décrivent les modifications apportées à le basé sur un modèle généré *Program.cs* fichier.
+Les images suivantes montrent les modifications apportées au fichier *Program.cs* généré par modèle.
 
-![différences de version ancienne](20_21/_static/main20.png)
+![différences entre les anciennes versions](20_21/_static/main20.png)
 
-L’illustration précédente montre la version 2.0 avec les suppressions en rouge.
+L’image précédente montre la version 2,0 avec les suppressions en rouge.
 
-L’illustration suivante montre le code 2.1. Le code en vert remplacé la version 2.0 :
+L’image suivante montre le code 2,1. Le code en vert a remplacé la version 2,0 :
 
-![différences de version nouvelle](20_21/_static/main21.png)
+![nouvelles différences de version](20_21/_static/main21.png)
 
-Le code suivant montre la version 2.1 de *Program.cs*:
+Le code suivant illustre la version 2,1 de *Program.cs*:
 
 [!code-csharp[](20_21/sample/Program.cs?name=snippet)]
 
-La nouvelle `Main` remplace l’appel à `BuildWebHost` avec [CreateWebHostBuilder](/dotnet/api/microsoft.aspnetcore.mvc.testing.webapplicationfactory-1.createwebhostbuilder). [IWebHostBuilder](/dotnet/api/microsoft.aspnetcore.hosting.iwebhostbuilder) a été ajouté pour prendre en charge un nouveau [infrastructure de test d’intégration](xref:test/integration-tests).
+Le nouveau `Main` remplace l’appel à `BuildWebHost` par [CreateWebHostBuilder](/dotnet/api/microsoft.aspnetcore.mvc.testing.webapplicationfactory-1.createwebhostbuilder). [IWebHostBuilder](/dotnet/api/microsoft.aspnetcore.hosting.iwebhostbuilder) a été ajouté pour prendre en charge une nouvelle [infrastructure de test d’intégration](xref:test/integration-tests).
 
 ### <a name="changes-to-startup"></a>Modifications apportées au démarrage
 
-Le code suivant montre les modifications de code de modèle 2.1 généré. Toutes les modifications sont nouvellement ajoutées du code, à ceci près que `UseBrowserLink` a été supprimée :
+Le code suivant montre les modifications apportées au code généré par le modèle 2,1. Toutes les modifications sont du code récemment ajouté, à ceci près que `UseBrowserLink` a été supprimée :
 
 [!code-csharp[](20_21/sample/Startup.cs?highlight=3,4,21-26,30,42,45,47)]
 
 Les modifications de code précédentes sont détaillées dans :
 
-* [Prise en charge de RGPD dans ASP.NET Core](xref:security/gdpr) pour `CookiePolicyOptions` et `UseCookiePolicy`.
-* [Protocole de sécurité Strict Transport HTTP (HSTS)](xref:security/enforcing-ssl#http-strict-transport-security-protocol-hsts) pour `UseHsts`.
-* [Exiger s-HTTP](xref:security/enforcing-ssl#require-https) pour `UseHttpsRedirection`.
+* La [prise en charge de RGPD dans ASP.net Core](xref:security/gdpr) pour les `CookiePolicyOptions` et les `UseCookiePolicy`.
+* [HSTS (protocole de sécurité de transport strict http)](xref:security/enforcing-ssl#http-strict-transport-security-protocol-hsts) pour `UseHsts`.
+* [Exiger le protocole HTTPS](xref:security/enforcing-ssl#require-https) pour `UseHttpsRedirection`.
 * [SetCompatibilityVersion](xref:mvc/compatibility-version) pour `SetCompatibilityVersion(CompatibilityVersion.Version_2_1)`.
 
 ## <a name="changes-to-authentication-code"></a>Modifications apportées au code d’authentification
 
-ASP.NET Core 2.1 fournit [ASP.NET Core Identity](xref:security/authentication/identity) comme un [bibliothèque de classes Razor](xref:razor-pages/ui-class) (RCL).
+ASP.NET Core 2,1 fournit [ASP.net Core identité](xref:security/authentication/identity) sous forme de [bibliothèque de classes Razor](xref:razor-pages/ui-class) (RCL).
 
-La valeur par défaut 2.1 l’interface utilisateur de l’identité ne fournit actuellement les nouvelles fonctionnalités importantes sur la version 2.0. Le remplacement d’identité avec le package RCL est facultatif. Les avantages de remplacement du modèle généré identité code avec la version RCL incluent :
+L’interface utilisateur de l’identité 2,1 par défaut ne fournit pas actuellement de nouvelles fonctionnalités importantes par rapport à la version 2,0. Le remplacement de l’identité par le package RCL est facultatif. Les avantages du remplacement du code d’identité généré par le modèle par la version RCL sont les suivants :
 
-* Nombre de fichiers est déplacé en dehors de votre arborescence source.
-* Les résolutions de bogues ou les nouvelles fonctionnalités à l’identité sont incluses dans le [Microsoft.AspNetCore.App métapackage](xref:fundamentals/metapackage-app). Vous obtenez automatiquement l’identité mis à jour lorsque `Microsoft.AspNetCore.App` est mis à jour.
+* De nombreux fichiers sont déplacés hors de votre arborescence source.
+* Les correctifs de bogues ou les nouvelles fonctionnalités de l’identité sont inclus dans le sous- [package Microsoft. AspNetCore. app](xref:fundamentals/metapackage-app). Vous recevez automatiquement l’identité mise à jour lorsque `Microsoft.AspNetCore.App` est mis à jour.
 
-Si vous avez apporté non triviale modifications au modèle généré code d’identité :
+Si vous avez apporté des modifications non triviales au code d’identité généré par le modèle :
 
-* Les avantages ci-dessus probablement faire **pas** justifier la conversion vers la version RCL.
-* Vous pouvez conserver votre code ASP.NET Core Identity 2.0, il est entièrement pris en charge.
+* Les avantages précédents ne justifient probablement **pas** la conversion de la version RCL.
+* Vous pouvez conserver votre code d’identité ASP.NET Core 2,0, car il est entièrement pris en charge.
 
-Identité 2.1 expose des points de terminaison avec le `Identity` zone. Par exemple, le tableau suivant présente des exemples de points de terminaison d’identité qui changent à partir de 2.0 à la version 2.1 :
+L’identité 2,1 expose des points de terminaison avec la zone de `Identity`. Par exemple, le tableau suivant présente des exemples de points de terminaison d’identité qui changent de 2,0 à 2,1 :
 
-| 2.0 URL         | 2.1 URL DE |
+| URL 2,0         | URL 2,1 |
 | --------------- | ------------ |
-| / / Connexion au compte  | / Identity/Account/Login |
-| / Compte/déconnexion | Identité/compte/déconnecter |
-| / Compte/gérer | /Identity/Account/Manage |
+| /Account/Login  | /Identity/Account/Login |
+| /Account/Logout | /Identity/Account/Logout |
+| /Account/Manage | /Identity/Account/Manage |
 
-Les applications qui ont du code à l’aide d’identité et 2.0 de remplacer l’interface utilisateur de l’identité et la nécessité de bibliothèque d’identités 2.1 à prendre en compte les URL d’identité ont `/Identity` segment devant les URI. Pour gérer les nouveaux points de terminaison identité consiste à configurer redirections, par exemple, à partir de `/Account/Login` à `/Identity/Account/Login`.
+Les applications qui possèdent du code utilisant l’identité et remplacent l’interface utilisateur de l’identité 2,0 avec la bibliothèque d’identité 2,1 doivent prendre en compte les URL d’identité qui ont `/Identity` segment ajoutés aux URI. L’une des façons de gérer les nouveaux points de terminaison d’identité consiste à configurer des redirections, par exemple de `/Account/Login` à `/Identity/Account/Login`.
 
-### <a name="update-identity-to-version-21"></a>Identité de mise à jour vers la version 2.1
+### <a name="update-identity-to-version-21"></a>Mettre à jour l’identité vers la version 2,1
 
-Les options suivantes sont disponibles pour mettre à jour d’identité à la version 2.1.
+Les options suivantes sont disponibles pour mettre à jour l’identité vers 2,1.
 
-* Utilisez le code de l’identité UI 2.0 sans aucune modification. Code 2.0 de l’interface utilisateur d’identité sont entièrement pris en charge. Il s’agit d’une bonne approche lorsque des modifications significatives ont été apportées au code d’identité généré.
-* Supprimer votre code d’identité 2.0 existant et [identité d’une structure](xref:security/authentication/scaffold-identity) dans votre projet. Votre projet va utiliser le [ASP.NET Core Identity](xref:security/authentication/identity) [bibliothèque de classes Razor](xref:razor-pages/ui-class). Vous pouvez générer du code et l’interface utilisateur pour le code de l’interface utilisateur de l’identité que vous avez modifié. Appliquez vos modifications de code dans le code de l’interface utilisateur qui vient d’être généré automatiquement.
-* Supprimer votre code d’identité 2.0 existant et [une structure identité](xref:security/authentication/scaffold-identity) dans votre projet avec l’option à **remplacer tous les fichiers**.
+* Utilisez le code de l’interface utilisateur de l’identité 2,0 sans aucune modification. L’utilisation du code de l’interface utilisateur d’identité 2,0 est entièrement prise en charge. Il s’agit d’une bonne approche lorsque des modifications significatives ont été apportées au code d’identité généré.
+* Supprimez votre code d’identité 2,0 et votre [identité d’échafaudage](xref:security/authentication/scaffold-identity) existants dans votre projet. Votre projet utilisera la [bibliothèque de classes Razor](xref:razor-pages/ui-class) [ASP.net Core Identity](xref:security/authentication/identity) . Vous pouvez générer du code et une interface utilisateur pour n’importe quel code d’interface utilisateur de l’identité que vous avez modifié. Appliquez vos modifications de code au code d’interface utilisateur nouvellement généré.
+* Supprimez votre code d’identité 2,0 et votre [identité d’échafaudage](xref:security/authentication/scaffold-identity) existants dans votre projet avec l’option permettant de **remplacer tous les fichiers**.
 
-### <a name="replace-identity-20-ui-with-the-identity-21-razor-class-library"></a>Remplacez l’identité 2.0 interface utilisateur avec la bibliothèque de classes Razor identité 2.1
+### <a name="replace-identity-20-ui-with-the-identity-21-razor-class-library"></a>Remplacer l’interface utilisateur de l’identité 2,0 par la bibliothèque de classes d’identité 2,1 Razor
 
-Cette section décrit les étapes pour remplacer le code d’identité générée de modèle ASP.NET Core 2.0 avec le [ASP.NET Core Identity](xref:security/authentication/identity) [bibliothèque de classes Razor](xref:razor-pages/ui-class). Les étapes suivantes sont pour un projet de Pages Razor, mais l’approche pour un projet MVC est similaire.
+Cette section décrit les étapes à suivre pour remplacer le code d’identité généré par le modèle ASP.NET Core 2,0 par la [bibliothèque de classes Razor](xref:razor-pages/ui-class)d' [identité ASP.net Core](xref:security/authentication/identity) . Les étapes suivantes concernent un projet Razor Pages, mais l’approche d’un projet MVC est similaire.
 
-* Vérifiez le [fichier projet est mis à jour pour utiliser les 2.1 versions](#update-the-project-file-to-use-21-versions)
-* Supprimez les dossiers suivants et tous les fichiers dans les :
+* Vérifier que le [fichier projet est mis à jour pour utiliser les versions 2,1](#update-the-project-file-to-use-21-versions)
+* Supprimez les dossiers suivants et tous les fichiers qu’ils contiennent :
   * *Contrôleurs*
-  * *Pages/compte /*
+  * *Pages/compte/*
   * *Extensions*
-* Générez le projet.
-* [Structurer identité](xref:security/authentication/scaffold-identity) dans votre projet :
-  * Sélectionnez les projets quitter  *\_Layout.cshtml* fichier.
-  * Sélectionnez le **+** icône sur le côté droit de la **classe de contexte de données**. Acceptez le nom par défaut.
-  * Sélectionnez **ajouter** pour créer une nouvelle classe de contexte de données. Création d’un nouveau contexte de données est requis pour générer automatiquement. Vous supprimez le nouveau contexte de données dans la section suivante.
+* créer le projet ;
+* [Identité de l’échafaudage](xref:security/authentication/scaffold-identity) dans votre projet :
+  * Sélectionnez les projets quittant *\_fichier Layout. cshtml* .
+  * Sélectionnez l’icône **+** sur le côté droit de la **classe de contexte de données**. Acceptez le nom par défaut.
+  * Sélectionnez **Ajouter** pour créer une classe de contexte de données. La création d’un nouveau contexte de données est requise pour la structure. Vous supprimez le nouveau contexte de données dans la section suivante.
 
-### <a name="update-after-scaffolding-identity"></a>Mettre à jour après la génération de modèles automatique identité
+### <a name="update-after-scaffolding-identity"></a>Mettre à jour après l’identification de la génération de modèles automatique
 
-* Supprimer la génération de modèles automatique identité générée `IdentityDbContext` classe dérivée de la *zones/Identity/Data/* dossier.
-* Supprimer *Areas/Identity/IdentityHostingStartup.cs*.
-* Mise à jour le  *\_LoginPartial.cshtml* fichier :
-  * Déplacer *Pages /\_LoginPartial.cshtml* à *Pages/Shared/\_LoginPartial.cshtml*.
-  * Ajouter `asp-area="Identity"` aux liens d’ancrage et du formulaire.
-  * Mise à jour le `<form />` élément à `<form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">`.
+* Supprimez l’identification de l’échafaudage généré `IdentityDbContext` classe dérivée dans les *zones/identité/données/* dossier.
+* Supprimez *Areas/Identity/IdentityHostingStartup. cs*.
+* Mettez à jour le fichier *\_LoginPartial. cshtml* :
+  * Déplacez *pages/\_LoginPartial. cshtml* vers *pages/shared/\_LoginPartial. cshtml*.
+  * Ajoutez `asp-area="Identity"` au formulaire et aux liens d’ancrage.
+  * Mettez à jour l’élément `<form />` pour `<form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">`.
 
-  Le code suivant illustre la mise à jour  *\_LoginPartial.cshtml* fichier :
+  Le code suivant montre le fichier *\_LoginPartial. cshtml* mis à jour :
 
   [!code-cshtml[](20_21/sample/_LoginPartial.cshtml?highlight=8,11,22,23)]
 
-Mise à jour `ConfigureServices` par le code suivant :
+Mettez à jour `ConfigureServices` avec le code suivant :
 
 [!code-csharp[](20_21/sample/Startup2.cs?name=snippet)]
 
-## <a name="changes-to-razor-pages-projects-razor-files"></a>Modifie les projets fichiers Razor pages Razor
+## <a name="changes-to-razor-pages-projects-razor-files"></a>Modifications apportées aux fichiers Razor des projets Razor Pages
 
-### <a name="the-layout-file"></a>Le fichier de disposition
+### <a name="the-layout-file"></a>Fichier de disposition
 
-* Déplacer *Pages /\_Layout.cshtml* à *Pages/Shared/\_Layout.cshtml*
-* Dans *zones/Identity/Pages/\_ViewStart.cshtml*, modifier `Layout = "/Pages/_Layout.cshtml"` à `Layout = "/Pages/Shared/_Layout.cshtml"`.
-* Le  *\_Layout.cshtml* fichier intègre les modifications suivantes :
+* Déplacez *pages/\_Layout. cshtml* vers *pages/shared/\_Layout. cshtml*
+* Dans *Areas/Identity/pages/\_ViewStart. cshtml*, remplacez `Layout = "/Pages/_Layout.cshtml"` par `Layout = "/Pages/Shared/_Layout.cshtml"`.
+* Le fichier *Layout. cshtml du\_* présente les modifications suivantes :
 
   * `<partial name="_CookieConsentPartial" />` est ajouté. Pour plus d’informations, consultez [Prise en charge du RGPD dans ASP.NET Core](xref:security/gdpr).
-  * jQuery transforme 2.2.0 3.3.1.
+  * jQuery passe de 2.2.0 à 3.3.1.
 
-### <a name="validationscriptspartialcshtml"></a>\_ValidationScriptsPartial.cshtml
+### <a name="_validationscriptspartialcshtml"></a>\_ValidationScriptsPartial.cshtml
 
-* *Pages /\_ValidationScriptsPartial.cshtml* déplace vers *Pages/Shared/\_ValidationScriptsPartial.cshtml*.
-* *jQuery.Validate/1.14.0* devient *jquery.validate/1.17.0*.
+* *Pages/\_ValidationScriptsPartial. cshtml* se déplace vers *pages/shared/\_ValidationScriptsPartial. cshtml*.
+* *jQuery. Validate/1.14.0* passe à *jQuery. Validate/1.17.0*.
 
 ### <a name="new-files"></a>Nouveaux fichiers
 
 Les fichiers suivants sont ajoutés :
 
-* *Privacy.cshtml*
+* *Privacy. cshtml*
 * *Privacy.cshtml.cs*
 
-Consultez [RGPD prennent en charge dans ASP.NET Core](xref:security/gdpr) pour plus d’informations sur les fichiers mentionnés précédemment.
+Pour plus d’informations sur les fichiers précédents [, consultez prise en charge de RGPD dans ASP.net Core](xref:security/gdpr) .
 
-## <a name="changes-to-mvc-projects-razor-files"></a>Modifications apportées aux fichiers de Razor projets MVC
+## <a name="changes-to-mvc-projects-razor-files"></a>Modifications apportées aux projets MVC fichiers Razor
 
-### <a name="the-layout-file"></a>Le fichier de disposition
+### <a name="the-layout-file"></a>Fichier de disposition
 
-Le *Layout.cshtml* fichier intègre les modifications suivantes :
+Le fichier *Layout. cshtml* présente les modifications suivantes :
 
 * `<partial name="_CookieConsentPartial" />` est ajouté.
-* jQuery remplace 2.2.0 3.3.1
+* jQuery passe de 2.2.0 à 3.3.1
 
-### <a name="validationscriptspartialcshtml"></a>\_ValidationScriptsPartial.cshtml
+### <a name="_validationscriptspartialcshtml"></a>\_ValidationScriptsPartial.cshtml
 
-*jQuery.Validate/1.14.0* devient *jquery.validate/1.17.0*
+*jQuery. Validate/1.14.0* modifications apportées à *jQuery. Validate/1.17.0*
 
-### <a name="new-files-and-action-methods"></a>Nouveaux fichiers et les méthodes d’action
+### <a name="new-files-and-action-methods"></a>Nouveaux fichiers et méthodes d’action
 
 Les éléments suivants sont ajoutés :
 
-* *Views/Home/Privacy.cshtml*
-* Le `Privacy` méthode d’action est ajoutée au contrôleur Home.
+* *Affichages/page d’habitation/confidentialité. cshtml*
+* La méthode d’action `Privacy` est ajoutée au contrôleur d’hébergement.
 
-Consultez [RGPD prennent en charge dans ASP.NET Core](xref:security/gdpr) pour plus d’informations sur les fichiers mentionnés précédemment.
+Pour plus d’informations sur les fichiers précédents [, consultez prise en charge de RGPD dans ASP.net Core](xref:security/gdpr) .
 
-## <a name="changes-to-the-launchsettingsjson-file"></a>Modifications apportées au fichier launchSettings.json
+## <a name="changes-to-the-launchsettingsjson-file"></a>Modifications apportées au fichier launchSettings. JSON
 
-Comme les applications ASP.NET Core utilisent maintenant HTTPS par défaut, le *Properties/launchSettings.json* fichier a été modifié.
+Comme les applications ASP.NET Core utilisent désormais le protocole HTTPs par défaut, le fichier *Properties/launchSettings. JSON* a changé.
 
-Le JSON suivant illustre le 2.0 antérieure modèle généré *launchSettings.json* fichier :
+Le code JSON suivant montre le fichier *launchSettings. JSON* généré par le modèle précédent 2,0 :
 
 [!code-json[](20_21/sample/launchSettings20.json)]
 
-Le JSON suivant illustre le nouveau 2.1 modèle généré *launchSettings.json* fichier :
+Le code JSON suivant montre le nouveau fichier *launchSettings. JSON* généré par modèle 2,1 :
 
 [!code-json[](20_21/sample/launchSettings21.json)]
 
@@ -251,21 +251,21 @@ Pour plus d'informations, consultez <xref:security/enforcing-ssl>.
 
 ## <a name="breaking-changes"></a>Modifications avec rupture
 
-### <a name="fileresult-range-header"></a>En-tête de plage de FileResult
+### <a name="fileresult-range-header"></a>En-tête de plage FileResult
 
-<xref:Microsoft.AspNetCore.Mvc.FileResult> ne peut plus traiter les [Accept-Ranges](https://developer.mozilla.org/docs/Web/HTTP/Headers/Accept-Ranges) en-tête par défaut. Pour activer la `Accept-Ranges` en-tête, la valeur <xref:Microsoft.AspNetCore.Mvc.FileResult.EnableRangeProcessing> à `true`.
+<xref:Microsoft.AspNetCore.Mvc.FileResult> ne traite plus l’en-tête [Accept-Ranges](https://developer.mozilla.org/docs/Web/HTTP/Headers/Accept-Ranges) par défaut. Pour activer l’en-tête `Accept-Ranges`, définissez <xref:Microsoft.AspNetCore.Mvc.FileResult.EnableRangeProcessing> sur `true`.
 
-### <a name="controllerbasefile-and-physicalfile-range-header"></a>En-tête ControllerBase.File et PhysicalFile plage
+### <a name="controllerbasefile-and-physicalfile-range-header"></a>ControllerBase. file et en-tête de plage PhysicalFile
 
-Ce qui suit <xref:Microsoft.AspNetCore.Mvc.ControllerBase> méthodes ne peut plus traiter les [Accept-Ranges](https://developer.mozilla.org/docs/Web/HTTP/Headers/Accept-Ranges) en-tête par défaut :
+Les méthodes de <xref:Microsoft.AspNetCore.Mvc.ControllerBase> suivantes ne traitent plus l’en-tête [Accept-Ranges](https://developer.mozilla.org/docs/Web/HTTP/Headers/Accept-Ranges) par défaut :
 
-* Les surcharges de [ControllerBase.File](/dotnet/api/microsoft.aspnetcore.mvc.controllerbase.file#Microsoft_AspNetCore_Mvc_ControllerBase_File_System_String_System_String_System_String_System_Boolean_)
-* [ControllerBase.PhysicalFile](xref:Microsoft.AspNetCore.Mvc.ControllerBase.PhysicalFile*)
+* Surcharges de [ControllerBase. file](/dotnet/api/microsoft.aspnetcore.mvc.controllerbase.file#Microsoft_AspNetCore_Mvc_ControllerBase_File_System_String_System_String_System_String_System_Boolean_)
+* [ControllerBase. PhysicalFile](xref:Microsoft.AspNetCore.Mvc.ControllerBase.PhysicalFile*)
 
-Pour activer la `Accept-Ranges` en-tête, définissez le `EnableRangeProcessing` paramètre `true`.
+Pour activer l’en-tête `Accept-Ranges`, définissez le paramètre `EnableRangeProcessing` sur `true`.
 
-## <a name="additional-changes"></a>Modifications supplémentaires
+## <a name="additional-changes"></a>Autres modifications
 
-* Si l’hébergement de l’application sur Windows avec IIS, installez la dernière version [Bundle d’hébergement .NET Core](xref:host-and-deploy/iis/index#install-the-net-core-hosting-bundle).
+* Si vous hébergez l’application sur Windows avec IIS, installez le [bundle d’hébergement .net Core](xref:host-and-deploy/iis/index#install-the-net-core-hosting-bundle)le plus récent.
 * [SetCompatibilityVersion](xref:mvc/compatibility-version)
 * [Configuration du transport](xref:fundamentals/servers/kestrel#transport-configuration)
